create movie added

--- a/src/app/pages/movie-list/movie-list.component.html
+++ b/src/app/pages/movie-list/movie-list.component.html
@@ -1,3 +1,14 @@
 <app-header></app-header>
 
-<h2>Movie List</h2>
+<h2>{{ movieService.heading }}</h2>
+
+<ul class="movie-list">
+  @for (movie of movieService.movies; track $index) {
+    <li class="movie-item">
+      <h2>{{ $index + 1 }}</h2>
+      <h2>{{ movie.name }}</h2>
+      <h3>{{ movie.duration }}</h3>
+      <h3>{{ movie.director }}</h3>
+    </li>
+  }
+</ul>
