--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,7 +4,8 @@
     <ul class="nav-list">
       <li><a class="link" routerLink="/">Home</a></li>
       <li><a class="link" routerLink="/movies">Movies</a></li>
-      <li><a class="link" routerLink="/create">Form</a></li>
+      <li><a class="link" routerLink="/create">Movie Form</a></li>
+      <li><a class="link" routerLink="/users">Users</a></li>
     </ul>
   </nav>
 </header>
