--- a/src/app/pages/user-list/user-list.component.html
+++ b/src/app/pages/user-list/user-list.component.html
@@ -1,3 +1,12 @@
 <app-header></app-header>
 
-<p>user-list works!</p>
+<ul>
+  @for (user of userService.users; track user.id) {
+    <li>
+      <div>
+        <h2>{{user.name}}</h2>
+        <h3>{{user.email}}</h3>
+      </div>
+    </li>
+  }
+</ul>
