user details added

--- a/src/app/pages/user-details/user-details.component.html
+++ b/src/app/pages/user-details/user-details.component.html
@@ -1,1 +1,10 @@
-<p>user-details works!</p>
+<app-header></app-header>
+
+@if (selectedUser) {
+  <h2>{{ selectedUser.name }}</h2>
+  <h3>{{ selectedUser.email }}</h3>
+  <h3>{{ selectedUser.address.city }}</h3>
+  <h3>{{ selectedUser.address.street }}</h3>
+} @else {
+  <h2>No hay ningún usuario con ese id</h2>
+}
