--- a/src/app/pages/user-list/user-list.component.html
+++ b/src/app/pages/user-list/user-list.component.html
@@ -4,7 +4,9 @@
   @for (user of userService.users; track user.id) {
     <li>
       <div>
-        <h2>{{user.name}}</h2>
+        <a [routerLink]="user.id">
+          <h2>{{user.name}}</h2>
+        </a>
         <h3>{{user.email}}</h3>
       </div>
     </li>
