--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,6 +6,7 @@
       <li><a class="link" routerLink="/movies">Movies</a></li>
       <li><a class="link" routerLink="/create">Movie Form</a></li>
       <li><a class="link" routerLink="/users">Users</a></li>
+      <li><a class="link" routerLink="/user-form">User Form</a></li>
     </ul>
   </nav>
 </header>
