--- a/src/app/pages/user-list/user-list.component.html
+++ b/src/app/pages/user-list/user-list.component.html
@@ -8,6 +8,7 @@
           <h2>{{user.name}}</h2>
         </a>
         <h3>{{user.email}}</h3>
+        <button (click)="deleteUser(user.id)">Borrar Usuario</button>
       </div>
     </li>
   }
