--- a/src/app/pages/user-list/user-list.component.html
+++ b/src/app/pages/user-list/user-list.component.html
@@ -1,15 +1,19 @@
 <app-header></app-header>
 
-<ul>
+<ul class="user-list">
   @for (user of userService.users; track user.id) {
-    <li>
-      <div>
-        <a [routerLink]="user.id.toString()">
-          <h2>{{user.name}}</h2>
-        </a>
-        <h3>{{user.email}}</h3>
-        <button (click)="deleteUser(user.id)">Borrar Usuario</button>
-      </div>
-    </li>
+  <li
+    class="user-item"
+    [ngClass]="{ selected: user.id === selectedUser }"
+    (click)="selectUser(user.id)"
+  >
+    <div>
+      <a [routerLink]="user.id.toString()" class="user-link">
+        <h2 class="user-name">{{ user.name }}</h2>
+      </a>
+      <h3 class="user-email">{{ user.email }}</h3>
+      <p class="trash-icon" (click)="deleteUser(user.id)">🗑</p>
+    </div>
+  </li>
   }
 </ul>
